# Orbital-Wars

./: .gitignore  README.md  the-producer-agent.ipynb
orbit-wars-lab-main/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
orbit-wars-lab-main/agents/baselines/nearest-sniper/: agent.yaml
orbit-wars-lab-main/agents/baselines/random/: agent.yaml  main.py
orbit-wars-lab-main/agents/baselines/starter/: agent.yaml  main.py
orbit-wars-lab-main/agents/mine/my-agent/: agent.yaml
orbit-wars-lab-main/agents/mine/og-producer/: agent.yaml
orbit-wars-lab-main/agents/mine/producer/: agent.yaml  main.py
orbit-wars-lab-main/agents/mine/working_agent/: agent.yaml  (+1 more)
orbit-wars-lab-main/orbit_wars_app/: __init__.py  agent_serve.py  agent_subprocess.py  api.py  discovery.py  external.py  kaggle_auth.py  kaggle_scraper.py  kaggle_submissions.py  main.py  match.py  replay_store.py  schemas.py  tournament.py  trueskill_store.py
orbit-wars-lab-main/runs/: latest 2  trueskill.json
orbit-wars-lab-main/scripts/: dev.sh  fetch-kashiwaba-weights.sh
orbit-wars-lab-main/tests/: conftest.py
orbit-wars-lab-main/tests/fixtures/: minimal_replay.json
orbit-wars-lab-main/tests/integration/: test_api_agents.py  test_api_health.py  test_api_kaggle_submissions.py  test_api_ratings.py  test_api_replays.py  test_api_runs.py  test_api_tournaments.py  test_cli.py  test_match_faithful.py  test_match_fast.py  test_tournament.py  test_zoo_real.py
orbit-wars-lab-main/tests/unit/: test_agent_serve_loader.py  test_agent_subprocess.py  test_discovery.py  test_external.py  test_kaggle_auth.py  test_kaggle_submissions.py  test_replay_store.py  test_schemas.py  test_tournament_callback.py  test_tournament_cli.py  test_tournament_quickmatch.py  test_trueskill_store.py
orbit-wars-lab-main/viewer/: package.json  tsconfig.json  vite.config.ts
orbit-wars-lab-main/viewer/src/: api.ts  main.ts  renderer.ts  router.ts  style.css  theme.ts
orbit-wars-lab-main/web/: README.md
orbit-wars-lab-main/web/core/: package.json  tsconfig.tsbuildinfo
(+61 files in other folders)
